[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iss-pass-tracker"  # ✅ This is the name on PyPI (hyphen is fine here)
version = "1.0.1"
description = "Fetch upcoming ISS passes for a location and helpers to notify users."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.20.0"
]
license = { text = "MIT" }
authors = [ { name = "Sanjeet Kumar", email = "sanjeetkumarit@gmail.com" } ]
keywords = ["iss", "satellite", "space", "tracker", "open-notify"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sanjeetkumaritoutlook/iss-pass-tracker"
"Repository" = "https://github.com/sanjeetkumaritoutlook/iss-pass-tracker"

[tool.setuptools.packages.find]
where = ["."]
include = ["iss_pass_tracker*"]   # ✅ Matches the folder with underscores
exclude = ["tests*"]

[tool.setuptools]
package-dir = {"" = "."}

[project.optional-dependencies]
cli = ["click"]

[tool.setuptools.package-data]
"iss_pass_tracker" = ["py.typed"]
